docs: added list openings documentation
