# handler/listOpenings.go
@@ -7,11 +7,17 @@ import (
 	"github.com/guilhermemcardoso/go-opportunities-api/schemas"
 )
 
-func ListOpeningsHandler(ctx *gin.Context) {
+// @BasePath /api/v1
 
-	ctx.JSON(http.StatusOK, gin.H{
-		"message": "ListOpeningsHandler",
-	})
+// @Summary List openings
+// @Description Show all existing job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
+func ListOpeningsHandler(ctx *gin.Context) {
 
 	openings := []schemas.Opening{}
 	if err := db.Find(&openings).Error; err != nil {
